# logical_cpp

./: CMakeLists.txt  README.md
inc/: basic_adders.h  basic_gates.h  binary.h  n_bit_adder.h
src/: main.cpp
